--- a/qiyexiaohao/index.html
+++ b/qiyexiaohao/index.html
@@ -68,6 +68,10 @@
 			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
+				var loginOfc = plus.webview.getWebviewById('loginOfC');
+				loginOfc && loginOfc.close('none');
+				var login = plus.webview.getWebviewById('login');
+				login && login.close('none');
 				//首頁关闭ios右划
 				self.setStyle({
 					popGesture: "none"
