--- a/qiyexiaohao/login.html
+++ b/qiyexiaohao/login.html
@@ -66,7 +66,14 @@
 						}, 2000);
 						self = this;
 						//设备唯一标识符
-						w.setItem("identifier",plus.device.uuid.substr(0,15));
+						var identifier = w.getItem('identifier') || '';
+						if( identifier == ''){
+							identifier = plus.device.uuid.substr(0,15) || '';
+							if(identifier == ''){
+								identifier = new Date().getTime() + '00';
+							}
+							w.setItem("identifier",identifier);
+						}
 					}
 				},
 				methods: {
